# saas-market-2026-Analysis

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/marts/: mart_category.parquet  mart_features.parquet  mart_pricing.parquet
data/processed/: saas_clean.parquet
data/raw/: saas-market-2026.csv
docs/: architecture.md
notebooks/: exploration.ipynb
src/: __init__.py  pipeline.py
src/analysis/: __init__.py  marts.py
src/ingestion/: __init__.py  loader.py
src/transform/: __init__.py  cleaner.py
src/utils/: __init__.py  config.py  io.py  logger.py
tests/: conftest.py  test_ingestion.py  test_io.py  test_marts.py  test_pipeline.py  test_transform.py
